week-4/gitops/paas-service/manifests/ip-allowlist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: paas-api-allowlist
  namespace: cnpg-system
spec:
  ipAllowList:
    sourceRange:
      - "188.244.102.157/32"
