week-4/gitops/paas-service/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paas-api
  namespace: cnpg-system
  labels:
    app: paas-api
spec:
  selector:
    app: paas-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
